# RedditNobility.org

./: .gitignore  Cargo.toml  README.md  example.env
.github/: dependabot.yml
.github/workflows/: node.js.yml  push.yml  rust-pr.yml
migrations/2021-03-27-212806_create_mods/: up.sql
migrations/2021-03-27-214240_found_users/: down.sql  up.sql
migrations/2021-03-27-214251_members/: up.sql
migrations/2021-04-22-234414_create_users/: up.sql
migrations/2021-04-23-000923_create_api_keys/: up.sql
migrations/2021-04-23-000923_create_client_keys/: up.sql
migrations/2021-04-23-000927_create_auth_tokens/: up.sql
migrations/2021-05-01-110046_create_settings/: up.sql
migrations/2021-11-20-134159_create_otps/: down.sql  up.sql
migrations/2021-11-26-192225_create_team/: up.sql
resources/: log-debug.json  log-release.json  log.yml  login-message  names.txt
site/: components.d.ts  example.config.json  index.html  package-lock.json  package.json  vite.config.ts  vue.config.js
site/src/: App.vue  http-common.ts  main.ts
site/src/backend/: Generic.ts  Response.ts
site/src/backend/api/: Team.ts  User.ts
site/src/components/: Navbar.vue
site/src/router/: index.ts
site/src/views/: About.vue  Admin.vue  Home.vue  Install.vue  Login.vue  Me.vue  Moderator.vue  ModifyUser.vue  Review.vue
site/static/: login.css  moderator.css
site/static/css/: styles.css
site/templates/: admin.html  index.html  install.html  login.html  moderator.html  review-users.html  submit.html  user.html
src/: action.rs  admincontrollers.rs  api.rs  apiresponse.rs  controllers.rs  main.rs  models.rs  moderatorcontrollers.rs  morecontrollers.rs  recaptcha.rs  schema.rs  siteerror.rs  usercontrollers.rs  usererror.rs  utils.rs  websiteerror.rs
src/admin/: action.rs  controllers.rs  mod.rs
src/api/: admin.rs  apiresponse.rs  mod.rs  moderator.rs  user.rs
src/controllers/: mod.rs  moderator.rs  user.rs
src/error/: internal_error.rs  response.rs
src/error/handlers/: json_error.rs
src/frontend/: controllers.rs  mod.rs
src/install/: mod.rs
src/moderator/: action.rs  controllers.rs  mod.rs
src/settings/: action.rs  controller.rs  mod.rs  settings.rs  utils.rs
src/user/: action.rs  controllers.rs  login.rs  mod.rs  models.rs  team_controllers.rs  utils.rs
src/user/title/: mod.rs
static/: index.css  login.css
templates/: admin.html  error.html  login.html  moderator.html
