[package]
name = "rn_site"
version = "0.1.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2021"

[dependencies]

diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2_mysql = "*"
dotenv = "0.15.0"
actix = "0.10"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"
serde_qs = "0.8.5"
zip = "0.5.13"
futures = "0.3.15"
sanitize-filename = "0.3"
actix-files = "0.5.0"
new-rawr = { git = "https://github.com/wherkamp/new-rawr.git" }
bcrypt = "0.10.1"
rand = "0.8.4"
futures-util = "0.3.17"
actix-web = { version = "3.3.2", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"], optional = true }
nitro_log = { git = "https://github.com/wherkamp/nitro_log", features = ["time", "colors"] }
log = "0.4.14"
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.0"
derive_more = "0.99.16"
chrono = "0.4.19"
hyper = "0.13.9"
hyper-tls = "0.4.3"
time = "0.3.5"
actix-multipart = "0.3"
actix-cors = "0.5.4"
actix-service = "1.0.6"
toml = "0.5.8"
base64 = "0.13.0"

rust-embed = { version = "6.2.0", features = ["interpolate-folder-path"] }

[features]
# Defines a feature named `webp` that does not enable any other features.
ssl = ["openssl", "actix-web/openssl"]
