[package]
name = "rn_site"
version = "0.1.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2021"

[dependencies]
# Web
actix = "0.12.0"
actix-web = { version = "4.0.0-rc.2", features = ["openssl"] }
actix-cors = "0.6.0-beta.8"
actix-service = "2.0.1"
actix-multipart = "0.4.0-beta.13"
openssl = { version = "0.10", features = ["v110"], optional = true }
actix-files = "0.6.0-beta.16"

diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2_mysql = "*"
dotenv = "0.15.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"
serde_qs = "0.8.5"
zip = "0.5.13"
futures = "0.3.15"
sanitize-filename = "0.3"
rraw = "0.0.3"
bcrypt = "0.11.0"
rand = "0.8.4"
futures-util = "0.3.17"
nitro_log = { git = "https://github.com/wherkamp/nitro_log", features = ["time", "colors"] }
log = "0.4.14"
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.0"
derive_more = "0.99.16"
chrono = "0.4.19"
hyper = "0.14.15"
hyper-tls = "0.5.0"
time = "0.3.5"
toml = "0.5.8"
base64 = "0.13.0"
tokio = { version = "1.6.0", features = ["full"] }
rust-embed = { version = "6.2.0", features = ["interpolate-folder-path"] }

[features]
# Defines a feature named `webp` that does not enable any other features.
ssl = ["openssl", "actix-web/openssl"]