[package]
name = "rn_site"
version = "0.1.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2021"

[dependencies]
# Web
actix = "0.13.0"
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-cors = "0.6.1"
actix-service = "2.0.2"
actix-multipart = "0.4.0"
openssl = { version = "0.10.40", features = ["v110"], optional = true }
actix-files = "0.6.0"

diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2_mysql = "21.0.0"
dotenv = "0.15.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.9"
futures = "0.3.21"
sanitize-filename = "0.4.0"
rraw = "1.0.0-beta.0"
argon2 = "0.4.0"
rand = "0.8.5"
futures-util = "0.3.21"
nitro_log = { git = "https://github.com/wherkamp/nitro_log" }
log = "0.4.17"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
derive_more = "0.99.17"
chrono = "0.4.19"
hyper = "0.14.18"
hyper-tls = "0.5.0"
time = "0.3.9"
toml = "0.5.9"
base64 = "0.13.0"
tokio = { version = "1.18.2", features = ["full"] }
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }
clap = { version = "3.1.18", features = ["derive"] }

[features]
# Defines a feature named `webp` that does not enable any other features.
ssl = ["openssl", "actix-web/openssl"]
